filecomplaint legend text readability

--- a/HTML Wireframe/filecomplaint.html
+++ b/HTML Wireframe/filecomplaint.html
@@ -40,7 +40,7 @@
         </div>
         <div >
             <form class="row" style="text-align: left; margin: auto;" action = "results.html" method = "GET">
-                <legend>Offender Details</legend>
+                <legend style="color: #EEEEEE">Offender Details</legend>
                 <div class="col-md-6" style="margin: auto;">
                     <div class="row" id="nomargin">
                         <div class="col-md-6" id="fname">
