--- a/HTML Wireframe/lookup.html
+++ b/HTML Wireframe/lookup.html
@@ -45,7 +45,7 @@
       <hr>
       <h2>Required Information</h2>
       
-        <form>
+        <form onsubmit="event.preventDefault();return false">
           <div class="row">
             <div class="col-md-4 col-sm-12" id="lookupfname">
               <label for="searchName" style="color: #eeee;">Offender's Name:</label>
