--- a/HTML Wireframe/lookupAdmin.html
+++ b/HTML Wireframe/lookupAdmin.html
@@ -69,7 +69,7 @@
       <hr>
       <h2>Required Information</h2>
 
-      <form>
+      <form onsubmit="event.preventDefault();return false">
         <div class="row">
           <div class="col-md-4 col-sm-12" id="lookupfname">
             <label for="searchALname" style="color: #eeee;">Offender's Name:</label>
