fixed transfer and release layout

--- a/HTML Wireframe/transfer.html
+++ b/HTML Wireframe/transfer.html
@@ -12,112 +12,102 @@
 
     <div class="container-fluid">
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="welcome.html">Anabu's Offender Locator</a>
+            <a class="navbar-brand" href="welcome.html">Offender Locator</a>
             <ul class="navbar-nav ms-auto text-center">
                 <li><a class="nav-link" href="" onclick="printTransfer()"><img src="images/printer.png" alt="Print File" height="30px" width="30px"></a></li>
         </nav>
         
-        <div class="row">
+        <div class="row" id="nomargin">
             <div class="col-md-12">
                 <h2>TRANSFER FORM</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <div class="row">
+        <div class="row" id="nomargin" id="nomargin">
+            <div class="col-md-5">
+                <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p id="nomargin"><strong>Name :</strong></p>
+                        <p><strong>Name :</strong></p>
                     </div>
                     <div class="col-md-6">
-                        <p id="nomargin"> DOE, JOHN A.</p>
+                        <p> DOE, JOHN A.</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p id="nomargin"><strong>Age:</strong>
+                        <p><strong>Age:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p id="nomargin">40 years old </p>
+                        <p>40 years old </p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p id="nomargin"><strong>Gender:</strong>
+                        <p><strong>Gender:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p id="nomargin">Male</p> 
+                        <p>Male</p> 
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p id="nomargin"><strong>Offender ID:</strong>
+                        <p><strong>Offender ID:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p id="nomargin">0001</p>
+                        <p>0001</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p id="nomargin"><strong>Case ID:</strong>
+                        <p><strong>Case ID:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p id="nomargin">0001</p>
+                        <p>0001</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <p id="nomargin"><strong>Case:</strong>
+                        <p><strong>Case:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p id="nomargin">Theft</p>
+                        <p>Theft</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md">
-                        <p id="nomargin"><strong>Date of Complaint:</strong>
+                        <p><strong>Date of Complaint:</strong>
                     </div>
                     <div class="col-md">
-                       <p id="nomargin">______________________</p>
+                       <p>______________________</p>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="nomargin">
                     <div class="col-md">
-                        <p id="nomargin"><strong>Date of Transfer:</strong>
+                        <p><strong>Date of Transfer:</strong>
                     </div>
                     <div class="col-md">
-                       <p id="nomargin">______________________</p>
+                       <p>______________________</p>
                     </div>
                 </div>
             </div>
         </div>
         <h3>Case Description:</h3>
-            <p id="nomargin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil, exercitationem ut, pariatur suscipit commodi laboriosam necessitatibus fugiat deserunt perferendis amet? Nesciunt voluptatibus et facere, veritatis sed rerum quod vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, asperiores incidunt. Praesentium animi repellat reprehenderit magnam, facere tenetur quia beatae ut quo ex doloribus voluptate possimus? Odio asperiores culpa quisquam.</p>    
-        <br>
-        <br>
-        <br>
-        <div class="row" id="nomargin">
-            
-        </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nihil, exercitationem ut, pariatur suscipit commodi laboriosam necessitatibus fugiat deserunt perferendis amet? Nesciunt voluptatibus et facere, veritatis sed rerum quod vero! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, asperiores incidunt. Praesentium animi repellat reprehenderit magnam, facere tenetur quia beatae ut quo ex doloribus voluptate possimus? Odio asperiores culpa quisquam.</p>    
+
 
         <div class="row" id="nomargin">
-            <div class="row">
-                <div class="col-md-4">
-                    <p id="nomargin">__________________________</p>
-                    <p id="nomargin">Accused</p>
-                </div>
+            <div class="col-md-4">
+                <p>__________________________</p>
+                <p>Accused</p>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <p id="nomargin">__________________________</p>
-                    <p id="nomargin">Barangay Captain</p>
-                </div>
-            </div><div class="row">
-                <div class="col-md-4">
-                    <p id="nomargin">__________________________</p>
-                    <p id="nomargin">Complainant</p>
-                </div>
+            <div class="col-md-4">
+                <p>__________________________</p>
+                <p>Barangay Captain</p>
+            </div>
+            <div class="col-md-4">
+                <p>__________________________</p>
+                <p>Complainant</p>
             </div>
         </div>
     </div>
