--- a/HTML Wireframe/release.html
+++ b/HTML Wireframe/release.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Release Form</title>
 </head>
+<style type="text/css" media="print">
+    @page { 
+        size: landscape;
+    }
+</style>
 <body>
 
     <div class="container-fluid">
