Fixed Reset password

--- a/HTML Wireframe/forgot.html
+++ b/HTML Wireframe/forgot.html
@@ -44,13 +44,13 @@
             <form onsubmit="event.preventDefault();return false">
                 <div class="row" id="nomargin">
                 <div class="col-md-4" id="loginpassword">
-                    <label for="inputResetPassword">Password :</label>
+                    <label for="inputResetPassword">Enter Current Password :</label>
                     <input type="password" class="form-control" name="inputResetPassword" id="inputResetPassword" placeholder="*********" required>
                 </div>
             </div>
             <div class="row" id="nomargin">
                 <div class="col-md-4" id="loginconfirm">
-                    <label for="inputResetConfirm">Confirm Password :</label>
+                    <label for="inputResetConfirm">New Password :</label>
                     <input type="password" class="form-control" name="inputResetConfirm" id="inputResetConfirm" placeholder="*********" required>
                 </div>
             </div><div class="row" id="nomargin">
